--- a/requirements.txt.txt
+++ b/requirements.txt.txt
@@ -1,7 +1,8 @@
-streamlit==1.35.0
-pandas==2.2.2
-numpy==1.26.4
-scikit-learn==1.4.2
-matplotlib==3.8.4
-joblib==1.4.2
+streamlit
+pandas
+numpy
+scikit-learn
+xgboost
+joblib
 shap
+matplotlib
