--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit==1.35.0
-pandas==2.2.2
-numpy==1.26.4
-scikit-learn==1.4.2
-xgboost==2.0.3
-joblib==1.4.2
-matplotlib==3.8.4
+streamlit
+pandas
+numpy
+scikit-learn
+xgboost
+joblib
+matplotlib
